--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -66,20 +66,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   # To add assets to your application, add an assets section, like this:
   assets:
-    - assets/logo.png
-    - assets/images/01.jpg
-    - assets/images/02.jpg
-    - assets/images/03.jpg
-    - assets/images/04.jpg
-    - assets/images/11.jpg
-    - assets/images/12.jpg
-    - assets/images/13.jpg
-    - assets/images/14.jpg
-    - assets/banners/
-
-
-
-
+    - assets/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
