--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -66,6 +66,8 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   # To add assets to your application, add an assets section, like this:
   assets:
+    - assets/images/
+    - assets/banners/
     - assets/
 
   # An image asset can refer to one or more resolution-specific "variants", see
