Add order detail, new order screen

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,11 @@ dependencies:
   get: ^4.6.5
   image_picker: ^0.8.7
   carousel_pro_nullsafety: ^2.0.0
+  dropdown_search: ^5.0.6
+  step_tracker: ^0.0.5
+  file_picker: ^5.2.6
+  input_quantity: ^1.1.5
+
 
 
 
