--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,8 +42,14 @@ dependencies:
   get: ^4.6.5
   image_picker: ^0.8.7
   carousel_pro_nullsafety: ^2.0.0
+  file_picker: ^5.2.6
+  input_quantity: ^1.1.5
+  syncfusion_flutter_pdf: ^21.1.35
+  path_provider: ^2.0.14
+  open_file: ^3.2.1
 
-
+dependency_overrides:
+  ffi: ^2.0.1
 
 dev_dependencies:
   flutter_test:
