--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,7 @@ dependencies:
   syncfusion_flutter_pdf: ^21.1.35
   path_provider: ^2.0.14
   open_file: ^3.2.1
+  timeline_tile: ^2.0.0
 
 dependency_overrides:
   ffi: ^2.0.1
